--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "url": "https://github.com/chrisguttandin/limiter-audio-worklet.git"
     },
     "scripts": {
+        "lint:config": "eslint --config config/eslint/config.json --ext .js --report-unused-disable-directives config/",
         "prepare": "husky install",
         "prepublishOnly": "grunt build",
         "test": "grunt lint && grunt test"
