--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "dependencies": {
         "@babel/runtime": "^7.22.6",
         "limiter-audio-worklet-processor": "^1.1.56",
+        "linked": "^0.2.0",
         "standardized-audio-context": "^25.3.55",
         "tslib": "^2.6.1"
     },
     "description": "This module provides a loader for the LimiterAudioWorkletProcessor and the corresponding LimiterAudioWorkletNode.",
     "devDependencies": {
-        "@babel/core": "^7.22.9",
+        "@babel/core": "^7.22.19",
         "@babel/plugin-external-helpers": "^7.22.5",
         "@babel/plugin-transform-runtime": "^7.22.9",
         "@babel/preset-env": "^7.22.9",
